--- a/config.ini
+++ b/config.ini
@@ -28,7 +28,7 @@ header_links = GitHub, https://github.com/d2l-ai/d2l-tvm, fab fa-github,
 
 # A list of wildcards to indicate the markdown files that need to be evaluated as
 # Jupyter notebooks.
-notebooks = *.md */*.md
+notebooks = *.md */*.md */*.md
 
 # A list of files that will be copied to the build folder.
 resources = img/ data/ d2ltvm/ d2ltvm.bib setup.py
