--- a/config.ini
+++ b/config.ini
@@ -19,8 +19,9 @@ release = 0.1
 # A list of links that is displayed on the navbar. A link consists of three
 # items: name, URL, and a fontawesome icon
 # (https://fontawesome.com/icons?d=gallery). Items are separated by commas.
-header_links = GitHub, https://github.com/d2l-ai/d2l-tvm, fab fa-github,
-               PDF, http://tvm.d2l.ai.s3-website-us-west-2.amazonaws.com/d2l-tvm.pdf, fas fa-file-pdf
+header_links = All Notebooks, http://tvm.d2l.ai.s3-website-us-west-2.amazonaws.com/d2l-tvm.zip, fas fa-download,
+               PDF, http://tvm.d2l.ai.s3-website-us-west-2.amazonaws.com/d2l-tvm.pdf, fas fa-file-pdf,
+               GitHub, https://github.com/d2l-ai/d2l-tvm, fab fa-github
 
 # favicon = static/favicon.png
 
