--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ name = d2l-tvm
 # front page of the PDF file
 title = Dive into Deep Learning Compiler
 
-author = Mu Li, Yida Wang
+author = Contributors
 
 copyright = 2019, All authors. Licensed under Apache 2.0
 
