--- a/config.ini
+++ b/config.ini
@@ -71,7 +71,7 @@ google_analytics_tracking_id = UA-96378503-19
 
 github_repo = d2l-ai/d2l-tvm-colab
 
-libs = tvm, https://tvm-repo.s3-us-west-2.amazonaws.com/cuda10.0-llvm6.0/tvm-0.6.dev0-cp36-cp36m-linux_x86_64.whl https://tvm-repo.s3-us-west-2.amazonaws.com/cuda10.0-llvm6.0/topi-0.6.dev0-py3-none-any.whl
+libs = tvm, https://tvm-repo.s3-us-west-2.amazonaws.com/tvm-0.7.dev1-cp37-cp37m-linux_x86_64.whl https://tvm-repo.s3-us-west-2.amazonaws.com/topi-0.7.dev1-py3-none-any.whl
        d2ltvm, git+https://github.com/d2l-ai/d2l-tvm
        mxnet, mxnet-cu100
 
