--- a/config.ini
+++ b/config.ini
@@ -71,10 +71,10 @@ google_analytics_tracking_id = UA-96378503-19
 
 [colab]
 
-github_repo = d2l-ai/d2l-tvm-colab
+github_repo = tvm, d2l-ai/d2l-tvm-colab
 
-libs = tvm, https://tvm-repo.s3-us-west-2.amazonaws.com/tvm-0.7.dev1-cp37-cp37m-linux_x86_64.whl https://tvm-repo.s3-us-west-2.amazonaws.com/topi-0.7.dev1-py3-none-any.whl
-       d2ltvm, git+https://github.com/d2l-ai/d2l-tvm
-       mxnet, mxnet-cu100
+libs = tvm, tvm, https://tvm-repo.s3-us-west-2.amazonaws.com/tvm-0.7.dev1-cp37-cp37m-linux_x86_64.whl https://tvm-repo.s3-us-west-2.amazonaws.com/topi-0.7.dev1-py3-none-any.whl
+       tvm, d2ltvm, git+https://github.com/d2l-ai/d2l-tvm
+       tvm, mxnet, mxnet-cu100
 
 replace_svg_url = img, http://tvm.d2l.ai/_images
