add discuss for tvm (#47)
* add discuss for tvm

* Update config.ini

* delete extra line

--- a/config.ini
+++ b/config.ini
@@ -21,6 +21,7 @@ release = 0.1
 # (https://fontawesome.com/icons?d=gallery). Items are separated by commas.
 header_links = All Notebooks, http://tvm.d2l.ai/d2l-tvm.zip, fas fa-download,
                PDF, http://tvm.d2l.ai/d2l-tvm.pdf, fas fa-file-pdf,
+               Discuss, https://discuss.tvm.ai/c/12, fab fa-discourse,
                GitHub, https://github.com/d2l-ai/d2l-tvm, fab fa-github
 
 favicon = static/favicon.png
